--- a/README.org
+++ b/README.org
@@ -1,9 +1,11 @@
-# gripe
+#+TITLE: Gripe
+
+* Overview
 Emacs wrapper for https://github.com/bfontaine/grape
 
 WORK IN PROGRESS! (I just barely started on this)
 
-## Quick Start
+* Quick Start
 
 | Command    | Description                                                       |
 | gripe-find | Invokes `grape` on your specified file/directory path and pattern |
