Update README and ROADMAP

--- a/README.org
+++ b/README.org
@@ -4,7 +4,14 @@ Emacs wrapper for https://github.com/bfontaine/grape
 
 WORK IN PROGRESS! (I just barely started on this)
 
+* Notes
+- Only `ivy` is supported at the moment. See [[https://github.com/anonimitoraf/gripe/blob/main/ROADMAP.org][ROADMAP]]
+
 * Quick Start
 
 | Command    | Description                                                       |
 | gripe-find | Invokes `grape` on your specified file/directory path and pattern |
+
+| Configuration | Default | Description |
+|---------------+---------+-------------|
+|               |         |             |
