--- a/ROADMAP.org
+++ b/ROADMAP.org
@@ -1,12 +1,10 @@
 #+TITLE: Roadmap
 
 * Must-have
-- [-] Implement file-preview (similar to `ivy-calling`) [25%]
+- [-] Implement file-preview (similar to `ivy-calling`) [66%]
   - [X] Moving through matches should auto-preview
-  - [ ] Avoid using ivy-posframe (because then, you can't see the matches)
-  - [ ] Show the first-line of the matches
-    - Probably not possible until ivy-posframe is avoided otherwise, it might undesirably wrap
-  - [ ] Highlight the matches in the file preview (sort of like what swiper does)
+  - [ ] Show the first-line of the matches in ivy
+  - [X] Highlight the matches in the file preview (sort of like what swiper does)
 - [ ] Support helm [0%]
 - [ ] Support ido [0%]
 - [ ] Support selectrum [0%]
