--- a/ROADMAP.org
+++ b/ROADMAP.org
@@ -1,10 +1,11 @@
 #+TITLE: Roadmap
 
 * Must-have
-- [-] Implement file-preview (similar to `ivy-calling`) [66%]
-  - [X] Moving through matches should auto-preview
-  - [ ] Show the first-line of the matches in ivy
-  - [X] Highlight the matches in the file preview (sort of like what swiper does)
+- [-] Support ivy [75%]
+  + [X] Implement file-preview (similar to `ivy-calling`)
+  + [X] Moving through matches should auto-preview
+  + [ ] Show the first-line of the matches in ivy
+  + [X] Highlight the matches in the file preview (sort of like what swiper does)
 - [ ] Support helm [0%]
 - [ ] Support ido [0%]
 - [ ] Support selectrum [0%]
