--- a/README.org
+++ b/README.org
@@ -3,7 +3,8 @@
 Emacs wrapper for https://github.com/bfontaine/grape
 
 * Demos
-[[file:demos/gripe-ivy.gif][Using Ivy]]
+The following demos show `gripe` being used to search within https://github.com/bfontaine/grape
+- [[file:demos/gripe-ivy.gif][Using Ivy]]
 * Notes
 - Only `ivy` is supported at the moment. See [[https://github.com/anonimitoraf/gripe/blob/main/ROADMAP.org][ROADMAP]]
 - Uses `project.clj` as the project marker
