--- a/ROADMAP.org
+++ b/ROADMAP.org
@@ -2,16 +2,19 @@
 
 * Must-have
 - [X] Support ivy [100%]
+  + [X] Basic support
   + [X] Implement file-preview (similar to `ivy-calling`)
   + [X] Moving through matches should auto-preview
-  + [X] Highlight the matches in the file preview (sort of like what swiper does)
-- [X] Support helm
+- [-] Support helm [50%]
+  + [X] Basic support
+  + [ ] Moving through matches should auto-preview (How do you do this in helm?)
 - [ ] Support selectrum
 - [ ] Show the first-line of the matches
+- [X] Highlight the matches in the file preview (sort of like what swiper does)
 * Nice-to-have
 - [ ] Support https://github.com/borkdude/grasp
 
-* General TODOs [0%]
+* General TODOs
 - [-] Get package to a melpa-publishable state [66%]
   + [X] Read through https://www.gnu.org/software/emacs/manual/html_node/elisp/Packaging.html#Packaging
   + [X] Read through https://web.archive.org/web/20111120220609/http://marmalade-repo.org/doc-files/package.5.html
