--- a/ROADMAP.org
+++ b/ROADMAP.org
@@ -7,10 +7,13 @@
   + [X] Moving through matches should auto-preview
 - [X] Support helm [100%]
   + [X] Basic support
-- [ ] Support selectrum
+- [X] Support selectrum [100%]
+  + [X] Basic support
 - [ ] Show the first-line of the matches
 - [X] Highlight the matches in the file preview (sort of like what swiper does)
 * Nice-to-have
+- [ ] Support helm file-preview (similar to `ivy-calling`)
+- [ ] Support selectrum file-preview (similar to `ivy-calling`)
 - [ ] Support https://github.com/borkdude/grasp
 
 * General TODOs
